Add animations and transitions (entrance, hover and focus) on each section. Fix class atributte to elements

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,17 +7,17 @@ import { Icon } from "astro-icon/components";
     <span class="footer-container__dev-signature">Nehuen Cuenca - 2024</span>
     <ul class="footer-container__contact-icons-list">
         <li class="contact-icons-list-item">
-            <a href="mailto:nehuen.cuenca@yahoo.com" class="contact-icons-list__link">
+            <a href="mailto:nehuen.cuenca@yahoo.com" class="contact-icons-list-item__link" aria-label="Mail">
                 <Icon name="bx:mail-send" size={35} />
             </a>
         </li>
         <li class="contact-icons-list-item">
-            <a href="https://www.linkedin.com/in/nehuen-cuenca/" target="_blank" class="contact-icons-list__link">
+            <a href="https://www.linkedin.com/in/nehuen-cuenca/" target="_blank" class="contact-icons-list-item__link" aria-label="LinkedIn">
                 <Icon name="mdi:linkedin" size={35} />
             </a>
         </li>
         <li class="contact-icons-list-item">
-            <a href="https://github.com/NehuenCuenca" target="_blank" class="contact-icons-list__link">
+            <a href="https://github.com/NehuenCuenca" target="_blank" class="contact-icons-list-item__link" aria-label="GitHub">
                 <Icon name="mdi:github" size={35} />
             </a>
         </li>
@@ -45,8 +45,12 @@ import { Icon } from "astro-icon/components";
     display: flex;
     gap: 2rem;
 }
-.contact-icons-list-item{}
-.contact-icons-list__link{}
+.contact-icons-list-item, .footer-container__link-to-top{
+    transition: color .5s ease;
+}
+:is(.contact-icons-list-item, .footer-container__link-to-top):hover{
+    color: var(--color-details);
+}
 
 @media (width >= 768px) {
     .footer-container{
@@ -54,6 +58,5 @@ import { Icon } from "astro-icon/components";
         justify-content: space-between;
     }
 }
-
 
 </style>
