--- a/src/content/ProjectsSection.astro
+++ b/src/content/ProjectsSection.astro
@@ -1,5 +1,12 @@
 ---
 import { Icon } from "astro-icon/components";
+import { Image } from "astro:assets";
+import Buscaminas from '@assets/projects/Buscaminas.webp'
+import BanderasDelMundo from '@assets/projects/BanderasDelMundo.webp'
+import PostMalonePicture from '@assets/projects/PostMalonePicture.webp'
+import CuentasMatematicas from '@assets/projects/CuentasMatematicas.webp'
+import MegaLogo from '@assets/projects/MegaLogo.webp'
+import ArenaMobileInicio from '@assets/projects/ArenaMobileInicio.webp'
 
 
 ---
@@ -9,10 +16,10 @@ import { Icon } from "astro-icon/components";
             <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
         </svg>
     </div>
-    <h1 class="formation-container__title">Mis proyectos</h1>
+    <h1 class="projects-container__title">Mis proyectos</h1>
     <ul class="projects-list">
         <li class="projects-list-item">
-            <img src="/src/assets/projects/Buscaminas.webp" alt="Tablero inicial del juego Buscaminas" class="projects-list-item__image">
+            <Image src={Buscaminas} alt="Tablero inicial del juego Buscaminas" class="projects-list-item__image"/>
             <span class="title-project">Buscaminas
                 <button class="title-project__info-button">
                     <Icon name="bx:info-circle" size={25}/>
@@ -24,7 +31,7 @@ import { Icon } from "astro-icon/components";
             </div>
         </li>
         <li class="projects-list-item">
-            <img src="/src/assets/projects/BanderasDelMundo.webp" alt="Collage de banderas de paises del mundo" class="projects-list-item__image">
+            <Image src={BanderasDelMundo} alt="Collage de banderas de paises del mundo" class="projects-list-item__image" />
             
             <span class="title-project">Buscador de banderas 
                 <button class="title-project__info-button">
@@ -37,7 +44,7 @@ import { Icon } from "astro-icon/components";
             </div>
         </li>
         <li class="projects-list-item">
-            <img src="/src/assets/projects/PostMalonePicture.webp" alt="Post Malone cantando" class="projects-list-item__image">
+            <Image src={PostMalonePicture} alt="Post Malone cantando" class="projects-list-item__image" />
             <span class="title-project">Tributo a Post Malone 
                 <button class="title-project__info-button">
                     <Icon name="bx:info-circle" size={25}/>
@@ -49,7 +56,7 @@ import { Icon } from "astro-icon/components";
             </div>
         </li>
         <li class="projects-list-item">
-            <img src="/src/assets/projects/CuentasMatematicas.webp" alt="Cuentas simples de matematica" class="projects-list-item__image">
+            <Image src={CuentasMatematicas} alt="Cuentas simples de matematica" class="projects-list-item__image" />
             <span class="title-project">Minijuego de Matematicas 
                 <button class="title-project__info-button">
                     <Icon name="bx:info-circle" size={25}/>
@@ -61,7 +68,7 @@ import { Icon } from "astro-icon/components";
             </div>
         </li>
         <li class="projects-list-item">
-            <img src="/src/assets/projects/MegaLogo.webp" alt="Logo de un gimnasio" class="projects-list-item__image">
+            <Image src={MegaLogo} alt="Logo de un gimnasio" class="projects-list-item__image" />
             <span class="title-project">Landing page para gimnasio 
                 <button class="title-project__info-button">
                     <Icon name="bx:info-circle" size={25}/>
@@ -73,7 +80,7 @@ import { Icon } from "astro-icon/components";
             </div>
         </li>
         <li class="projects-list-item">
-            <img src="/src/assets/projects/ArenaMobileInicio.webp" alt="Inicio de la pagina Arena Mobile" class="projects-list-item__image">
+            <Image src={ArenaMobileInicio} alt="Inicio de la pagina Arena Mobile" class="projects-list-item__image" />
             <span class="title-project">Arena Mobile 
                 <button class="title-project__info-button">
                     <Icon name="bx:info-circle" size={25}/>
@@ -114,13 +121,13 @@ import { Icon } from "astro-icon/components";
         fill: var(--color-bg);
     }
 
-    .formation-container__title{
+    .projects-container__title{
         font: normal normal 600 clamp(2.2rem, 6vw, 3rem) var(--display-font, Tahoma);
         color: var(--color-titles);
     }
     .projects-list{
         margin-top: 5rem;
-        padding: 0 1rem 7rem 1rem;
+        padding: 0 1rem 10rem 1rem;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -151,15 +158,13 @@ import { Icon } from "astro-icon/components";
         max-width: 210px;
         height: 50vh;
         top: -4rem;
+        rotate: 5deg;
+        transition: rotate .3s ease;
     }
 
-    /* .projects-list-item__info{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        
-    } */
+    .projects-list-item:hover .projects-list-item__image{
+        rotate: 0deg;
+    }
 
     .title-project{
         font: normal normal 500 1.5rem var(--display-font);
