--- a/src/content/Hero.astro
+++ b/src/content/Hero.astro
@@ -6,7 +6,7 @@ import { Icon } from 'astro-icon/components';
     <h2 class="hero-container__subtitle">y soy un desarrollador web<br>en proceso 🤓.</h2>
     <div class="divider">
         <div class="divider__line"></div>
-        <a href="#formation-section" class="arrow-button">
+        <a href="#formation-section" class="arrow-button" aria-label="Next section">
             <Icon class='arrow-button__icon' name="bx:down-arrow-circle" size={40} />
         </a>
         <div class="divider__line"></div>
@@ -21,6 +21,7 @@ import { Icon } from 'astro-icon/components';
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
+        animation: fadeFromCenter 2s ease 0s 1 normal forwards;
     }
 
     .hero-container__title, .hero-container__subtitle {
@@ -56,4 +57,14 @@ import { Icon } from 'astro-icon/components';
         width: clamp(40px, 10vw, 70px);
         height: clamp(40px, 10vh, 70px);
     }
+
+    @keyframes fadeFromCenter {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
+}
 </style>
