--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,6 +68,28 @@ import Footer from '@components/Footer.astro';
 		color: var(--color-font);
 	}
 
+	/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: var(--color-font) var(--color-bg);
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 20px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: var(--color-bg);
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: var(--color-font);
+    border-radius: 10px;
+    border: 3px solid var(--color-bg);
+  }
+
 	/* RESETS */
 	*, *::before, *::after {
 		box-sizing: border-box;
