--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -146,4 +146,31 @@ import Footer from '@components/Footer.astro';
 		scroll-margin-block-start: 120px; /*Adds margin to the top of the viewport*/
 		scroll-margin-block-end: 120px; /*Adds margin to the bottom of the viewport*/
 	}
+
+	dialog[open] {
+		margin: auto;
+		color: var(--color-font);
+    	background-color: var(--color-bg);
+    	border: 5px solid var(--color-titles);
+    	border-radius: 10px;
+	}
+
+	.modal__content{
+		font: normal normal 400 1.3rem var(--default-font);
+	}
+
+	.modal__content h3{
+		font: normal normal 400 1.5rem var(--display-font);
+		color: var(--color-titles)
+	}
+
+	.modal__content h3, .modal__content a {
+		text-decoration: underline;
+	}
+
+	.modal__close, .modal__close button{
+		font: normal normal 400 1.3rem var(--display-font);
+		background-color: var(--color-details) !important;
+		color: var(--color-titles) !important;
+	}
 </style>
