--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -157,6 +157,8 @@ import Footer from '@components/Footer.astro';
 
 	.modal__content{
 		font: normal normal 400 1.3rem var(--default-font);
+		max-height: 70vh;
+		overflow-y: auto;
 	}
 
 	.modal__content h3{
