Add PhotoScape to design techonologies. Improve placeholder texts on ContactForm and Services items readability

--- a/src/content/ServicesSection.astro
+++ b/src/content/ServicesSection.astro
@@ -195,5 +195,9 @@ import BackendService from '@assets/services/backend-service.png';
     .service-items-list_backend{
       list-style-type: square;
     }
+
+    .service-items-list li{
+      word-break: break-word;
+    }
     
 </style>
