--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
 // FONTS
 import '@fontsource/manjari';
 import '@fontsource/lemon';
-import Navbar from '@components/Navbar.astro';
+import Navbar from '@components/Navbar.vue'
 import Footer from '@components/Footer.astro';
 
 ---
@@ -25,7 +25,7 @@ import Footer from '@components/Footer.astro';
 	</head>
 	<body>
 		<header>
-			<Navbar />
+			<Navbar client:load/>
 		</header>
 		<slot />
 		<Footer />
